--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/jpa-reactive .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/quarkus-jpa-reactive .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/jpa-reactive
+# docker run -i --rm -p 8080:8080 quarkus/quarkus-jpa-reactive
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.6
