--- a/src/main/docker/Dockerfile.native-micro
+++ b/src/main/docker/Dockerfile.native-micro
@@ -10,11 +10,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/jpa-reactive .
+# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/quarkus-jpa-reactive .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/jpa-reactive
+# docker run -i --rm -p 8080:8080 quarkus/quarkus-jpa-reactive
 #
 ###
 FROM quay.io/quarkus/quarkus-micro-image:2.0
