--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -13,5 +13,6 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build & Test with Maven
+      - name: Build & Test quarkus-jpa-reactive
         run: mvn --batch-mode --update-snapshots package
+        working-directory: quarkus-jpa-reactive
