add custom props

--- a/quarkus-jpa-reactive/src/main/resources/application.properties
+++ b/quarkus-jpa-reactive/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 # configure your datasource
 quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = user
-quarkus.datasource.password = password
+application.host=${HOST:${remote.host}}
+quarkus.datasource.username = ${DATASOURCE_USER:user}
+quarkus.datasource.password = ${DATASOURCE_PASSWORD:password}
 quarkus.datasource.reactive.url = vertx-reactive:postgresql://localhost:5432/tutorial-db
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation = drop-and-create
+
+custom.message=hello-world
