--- a/quarkus-kafka/src/main/resources/application.properties
+++ b/quarkus-kafka/src/main/resources/application.properties
@@ -1,9 +1,11 @@
+%prod.kafka.bootstrap.servers=kafka:9092
+
 mp.messaging.incoming.sensors-in.topic=sensor_topic
 mp.messaging.outgoing.sensors-out.topic=sensor_topic
 mp.messaging.incoming.sensors-in.auto.offset.reset=earliest
 mp.messaging.incoming.sensors-in.failure-strategy=dead-letter-queue
 mp.messaging.incoming.sensors-in.dead-letter-queue.topic=sensor_topic_DLQ
-mp.messaging.incoming.sensors-in.dead-letter-queue.value.serializer=com.vincenzoracca.queue.serializer.SensorSerializer
+mp.messaging.incoming.sensors-in.dead-letter-queue.value.serializer=com.vincenzoracca.quarkus.kafka.queue.serializer.SensorSerializer
 
 
 #mp.messaging.incoming.sensors-in.auto.dead-letter-queue.topic=sensor_topic_dlq
